--- a/日文檢定/日文聽力/2023-12.md
+++ b/日文檢定/日文聽力/2023-12.md
@@ -1,118 +1,181 @@
 # 目錄
 
 - [日文](#日文)
-  - [jp](#jp)
-    - [第一題 jp](#第一題-jp)
-    - [第二題 jp](#第二題-jp)
-    - [第三題 jp](#第三題-jp)
-    - [第四題 jp](#第四題-jp)
-    - [第五題 jp](#第五題-jp)
-    - [第六題 jp](#第六題-jp)
-    - [第七題 jp](#第七題-jp)
-    - [第八題 jp](#第八題-jp)
-    - [第九題 jp](#第九題-jp)
-    - [第十題 jp](#第十題-jp)
-    - [第十一題 jp](#第十一題-jp)
-    - [第十二題 jp](#第十二題-jp)
-    - [第十三題 jp](#第十三題-jp)
-    - [第十四題 jp](#第十四題-jp)
-    - [第十五題 jp](#第十五題-jp)
-    - [第十六題 jp](#第十六題-jp)
-    - [第十七題 jp](#第十七題-jp)
-    - [第十八題 jp](#第十八題-jp)
-    - [第十九題 jp](#第十九題-jp)
-    - [第二十題 jp](#第二十題-jp)
-    - [第二十一題 jp](#第二十一題-jp)
-    - [第二十二題 jp](#第二十二題-jp)
-    - [第二十三題 jp](#第二十三題-jp)
-    - [第二十四題 jp](#第二十四題-jp)
-    - [第二十五題 jp](#第二十五題-jp)
-    - [第二十六題 jp](#第二十六題-jp)
-    - [第二十七題 jp](#第二十七題-jp)
-    - [第二十八題 jp](#第二十八題-jp)
-    - [第二十九題 jp](#第二十九題-jp)
+
+  - [第一題 jp](#第一題-jp)
+  - [第二題 jp](#第二題-jp)
+  - [第三題 jp](#第三題-jp)
+  - [第四題 jp](#第四題-jp)
+  - [第五題 jp](#第五題-jp)
+  - [第六題 jp](#第六題-jp)
+  - [第七題 jp](#第七題-jp)
+  - [第八題 jp](#第八題-jp)
+  - [第九題 jp](#第九題-jp)
+  - [第十題 jp](#第十題-jp)
+  - [第十一題 jp](#第十一題-jp)
+  - [第十二題 jp](#第十二題-jp)
+  - [第十三題 jp](#第十三題-jp)
+  - [第十四題 jp](#第十四題-jp)
+  - [第十五題 jp](#第十五題-jp)
+  - [第十六題 jp](#第十六題-jp)
+  - [第十七題 jp](#第十七題-jp)
+  - [第十八題 jp](#第十八題-jp)
+  - [第十九題 jp](#第十九題-jp)
+  - [第二十題 jp](#第二十題-jp)
+  - [第二十一題 jp](#第二十一題-jp)
+  - [第二十二題 jp](#第二十二題-jp)
+  - [第二十三題 jp](#第二十三題-jp)
+  - [第二十四題 jp](#第二十四題-jp)
+  - [第二十五題 jp](#第二十五題-jp)
+  - [第二十六題 jp](#第二十六題-jp)
+  - [第二十七題 jp](#第二十七題-jp)
+  - [第二十八題 jp](#第二十八題-jp)
+  - [第二十九題 jp](#第二十九題-jp)
+
 - [中文](#中文)
 
-  - [cn](#cn)
+  - [第一題 cn](#第一題-cn)
+  - [第二題 cn](#第二題-cn)
+  - [第三題 cn](#第三題-cn)
+  - [第四題 cn](#第四題-cn)
+  - [第五題 cn](#第五題-cn)
+  - [第六題 cn](#第六題-cn)
+  - [第七題 cn](#第七題-cn)
+  - [第八題 cn](#第八題-cn)
+  - [第九題 cn](#第九題-cn)
+  - [第十題 cn](#第十題-cn)
+  - [第十一題 cn](#第十一題-cn)
+  - [第十二題 cn](#第十二題-cn)
+  - [第十三題 cn](#第十三題-cn)
+  - [第十四題 cn](#第十四題-cn)
+  - [第十五題 cn](#第十五題-cn)
+  - [第十六題 cn](#第十六題-cn)
+  - [第十七題 cn](#第十七題-cn)
+  - [第十八題 cn](#第十八題-cn)
+  - [第十九題 cn](#第十九題-cn)
+  - [第二十題 cn](#第二十題-cn)
+  - [第二十一題 cn](#第二十一題-cn)
+  - [第二十二題 cn](#第二十二題-cn)
+  - [第二十三題 cn](#第二十三題-cn)
+  - [第二十四題 cn](#第二十四題-cn)
+  - [第二十五題 cn](#第二十五題-cn)
+  - [第二十六題 cn](#第二十六題-cn)
+  - [第二十七題 cn](#第二十七題-cn)
+  - [第二十八題 cn](#第二十八題-cn)
+  - [第二十九題 cn](#第二十九題-cn)
 
-    - [第一題 cn](#第一題-cn)
-    - [第二題 cn](#第二題-cn)
-    - [第三題 cn](#第三題-cn)
-    - [第四題 cn](#第四題-cn)
-    - [第五題 cn](#第五題-cn)
-    - [第六題 cn](#第六題-cn)
-    - [第七題 cn](#第七題-cn)
-    - [第八題 cn](#第八題-cn)
-    - [第九題 cn](#第九題-cn)
-    - [第十題 cn](#第十題-cn)
-    - [第十一題 cn](#第十一題-cn)
-    - [第十二題 cn](#第十二題-cn)
-    - [第十三題 cn](#第十三題-cn)
-    - [第十四題 cn](#第十四題-cn)
-    - [第十五題 cn](#第十五題-cn)
-    - [第十六題 cn](#第十六題-cn)
-    - [第十七題 cn](#第十七題-cn)
-    - [第十八題 cn](#第十八題-cn)
-    - [第十九題 cn](#第十九題-cn)
-    - [第二十題 cn](#第二十題-cn)
-    - [第二十一題 cn](#第二十一題-cn)
-    - [第二十二題 cn](#第二十二題-cn)
-    - [第二十三題 cn](#第二十三題-cn)
-    - [第二十四題 cn](#第二十四題-cn)
-    - [第二十五題 cn](#第二十五題-cn)
-    - [第二十六題 cn](#第二十六題-cn)
-    - [第二十七題 cn](#第二十七題-cn)
-    - [第二十八題 cn](#第二十八題-cn)
-    - [第二十九題 cn](#第二十九題-cn)
+  # 日文
 
-    # 日文
+  ### 第一題 jp
 
-    ## jp
+  時計の会社の営業部で上司と男の人が話しています。男の人はこの後まず、何をしなければなりませんか。
 
-    ### 第一題 jp
+  女：田中さん、今山下食品さんから電話があったんだけどね、山下食品の創立記念パーティーで配布する置時計１００個、納品日を早めてもらえないかって。
 
-    時計の会社の営業部で上司と男の人が話しています。男の人はこの後まず、何をしなければなりませんか。
+  男：納期が来週の火曜日のものですよね？
 
-    女：田中さん、今山下食品さんから電話があったんだけどね、山下食品の創立記念パーティーで配布する置時計１００個、納品日を早めてもらえないかって。
+  女：うん、契約書に書かれてる納期は先方も承知してるけど、何か事情があるみたいで。
 
-    男：納期が来週の火曜日のものですよね？
+  男：そうなんですね。製品は予定通り来週の火曜日にうちの工場から直接先方に納品する手筈になってますが…。
 
-    女：うん、契約書に書かれてる納期は先方も承知してるけど、何か事情があるみたいで。
+  女：そう。じゃ、工場に納期の前倒しを頼んでみて。工場は２、３日余裕をもって仕上げているはずだから。今週中には届けられると思うんだ。納品の日程を確認した上で、山下食品さんと話したほうがいいから。
 
-    男：そうなんですね。製品は予定通り来週の火曜日にうちの工場から直接先方に納品する手筈になってますが…。
+  男：わかりました。
 
-    女：そう。じゃ、工場に納期の前倒しを頼んでみて。工場は２、３日余裕をもって仕上げているはずだから。今週中には届けられると思うんだ。納品の日程を確認した上で、山下食品さんと話したほうがいいから。
+  男の人はこの後まず、何をしなければなりませんか。
 
-    男：わかりました。
+  １．契約書を確認する　　２．山下食品に納品に行く
+  ３．工場に納品日の変更を依頼する　４．山下食品と打ち合わせをする
 
-    男の人はこの後まず、何をしなければなりませんか。
+  [第一題 cn](#第一題-cn)
 
-    １．契約書を確認する　　２．山下食品に納品に行く
-    ３．工場に納品日の変更を依頼する　４．山下食品と打ち合わせをする
+  ### 第二題 jp
 
-    # 中文
+市役所で、女の職員と男の職員が市の広報誌について話しています。男の職員は来月号の表紙をどのように修正しますか。
 
-    ## cn
+女：佐藤さん、来月号の広報誌の表紙の案に目を通しました。
 
-    ### 第一題 cn
+男：はい。
 
-    答案:3
+女：来月号の特集は光市で見られるいろいろな野鳥の紹介ということで一羽の鳥がアップで写っている写真を一枚、大きく載せるんですね。
 
-    在一家鐘錶公司的業務部，主管和一位男員工正在談話。 這位男員工接下來首先需要做的是什麼？
+男：ええ、光市でもこんなに美しい鳥が見られるという意外性をアピールできると思って。
 
-    女：田中先生，剛剛山下食品打來電話，說是希望能提前交貨那一百個要在他們公司創立紀念派對上發送的座鐘。
+女：私は野鳥の写真を何枚か載せるのかと思ったんですけど、これも迫力があって悪くないですね。
 
-    男：是那個預定下週二交貨的案子對吧？
+男：ありがとうございます。あ、この鳥の簡単な説明は表紙の下の方に入れますか？
 
-    女：對，對方知道合約上寫的是那個日期，但好像有什麼特殊情況。
+女：うーん、それは特集ページに入れてください。で、表紙の「光市の美しい野鳥」っていう見出しですけど…。
 
-    男：原來如此。產品是按照原計畫從我們工廠在下週二直接送到對方那邊的。
+男：はい。
 
-    女：嗯，那你去跟工廠談談，看看能不能提前交貨。工廠應該會提前個兩三天完成，所以我覺得這週內應該能送達。不過，在這之前要先確認交貨時間，再跟山下食品那邊聯絡比較好。
+女：「光市の野鳥を探そう」のような表現の方が目を引くんじゃないでしょうか。今月から目次を表紙の隅に入れたんですね。これはいいと思いますよ。
 
-    男：明白了。
+男：はい、ではご指摘の点を修正します。
 
-    這位男員工接下來首先需要做什麼？
+男の職員は来月号の表紙をどのように修正しますか。
 
-    １．確認合約內容 ２．去山下食品交貨
-    ３．請工廠變更交貨日期 ４．與山下食品洽談
+１．のせる写真を増やす　　２．鳥の説明を加える
+３．見出しの表現を変える　４．目次を入れる
+
+[第二題 cn](#第二題-cn)
+
+--
+
+# 中文
+
+### 第一題 cn
+
+答案:3
+
+在一家鐘錶公司的業務部，主管和一位男員工正在談話。 這位男員工接下來首先需要做的是什麼？
+
+女：田中先生，剛剛山下食品打來電話，說是希望能提前交貨那一百個要在他們公司創立紀念派對上發送的座鐘。
+
+男：是那個預定下週二交貨的案子對吧？
+
+女：對，對方知道合約上寫的是那個日期，但好像有什麼特殊情況。
+
+男：原來如此。產品是按照原計畫從我們工廠在下週二直接送到對方那邊的。
+
+女：嗯，那你去跟工廠談談，看看能不能提前交貨。工廠應該會提前個兩三天完成，所以我覺得這週內應該能送達。不過，在這之前要先確認交貨時間，再跟山下食品那邊聯絡比較好。
+
+男：明白了。
+
+這位男員工接下來首先需要做什麼？
+
+１．確認合約內容 ２．去山下食品交貨
+３．請工廠變更交貨日期 ４．與山下食品洽談
+
+[第一題 jp](#第一題-jp)
+
+### 第二題 cn
+
+答案:3
+
+女： 佐藤先生，我已經看過下個月號的市政宣傳刊物封面草案了。
+
+男： 是。
+
+女： 下個月的特輯是介紹在光市可以看到的各種野鳥，所以封面上會放一張放大的一隻鳥的照片對吧？
+
+男： 是的。我覺得可以藉此展現「在光市竟然也能看到這麼美的鳥」這種意外感。
+
+女： 我本來以為會放幾張野鳥的照片，但這樣的設計也很有魄力，不錯呢。
+
+男： 謝謝您。啊，這隻鳥的簡單介紹，要放在封面下方嗎？
+
+女： 嗯，那個請放在特輯頁面吧。然後，關於封面的標題「光市的美麗野鳥」...
+
+男： 是。
+
+女： 我覺得像是「來尋找光市的野鳥吧」這樣的表達可能更能吸引目光。從這個月開始把目錄放在封面角落對吧？我覺得這樣很好。
+
+男： 好，那我會根據您指出的部分做修改。
+
+男職員會如何修改下個月號的封面？
+
+１．增加照片數量 ２．加入鳥的說明
+３．更改標題的表達方式 ４．加入目錄
+
+[第二題 jp](#第第二題-jp)
