--- a/日文檢定/日文聽力/2023-12.md
+++ b/日文檢定/日文聽力/2023-12.md
@@ -120,6 +120,29 @@
 
 [第二題 cn](#第二題-cn)
 
+### 第三題 jp
+
+IT の会社で男の人と女の人が話しています。女の人はアルバイトの人探すために何をしますか。
+
+男：鈴木さん、今私が担当してるソフト開発のプロジェクトでアルバイトを雇おうと思ってるんだ。誰かいい人知らない？鈴木さん、去年大学院出たばかりだよね？
+
+女：えっと、大学時代の同級生でバイトを探している人がいますけど、連絡してみましょうか。
+
+男：その人、専門も鈴木さんと同じ？専門的な知識がある人がいいんだけど、大学院の後輩で目ぼしい人いないかな？
+
+女：ああ、一人いるので聞いてみます。ただ、できるかどうかは…。あの、大学の学生課に求人を出すこともできますが…。
+
+男：以前、大学の学生課に求人を出したことあるんだけど、応募が殺到して選考に手間取っちやったんだよ。それに、知り合いからの紹介の方が心強いしね。もしその人に引き受けてもらえないようだったら、知り合いの大学の先生に私が頼んでみるから。
+
+女：わかりました。
+
+女の人はアルバイトの人を探すために何をしますか。
+
+１．大学時代の同級生に声をかける　　２．大学院の後輩に連絡を取る
+３．大学の学生課に求人を出す　４．大学の先生に紹介を頼む。
+
+[第三題 cn](#第三題-cn)
+
 --
 
 # 中文
@@ -178,4 +201,29 @@
 １．增加照片數量 ２．加入鳥的說明
 ３．更改標題的表達方式 ４．加入目錄
 
-[第二題 jp](#第第二題-jp)
+[第二題 jp](#第二題-jp)
+
+### 第三題 cn
+
+答案:2
+
+在 IT 公司裡，一位男員工和一位女員工正在對話。女員工為了找打工的人，要做什麼？
+
+男： 鈴木，我打算在我目前負責的軟體開發專案裡雇用一位打工的人。妳知道有沒有合適的人選？妳去年才從研究所畢業對吧？
+
+女： 嗯，大學時代有一位同學正在找打工的機會，我可以聯絡看看。
+
+男： 那個人和妳是同樣的專業嗎？我希望找有專業知識的人。妳在研究所的學弟妹中，有沒有合適的人選？
+
+女： 啊，有一位，我來問問看。不過，他是否能勝任就……。啊，也可以把徵才資訊登到大學的學生事務處。
+
+男： 以前我有在學生事務處登過徵才資訊，但申請的人太多，篩選上很花時間。而且，比起那個，我比較安心由認識的人介紹。如果那位學弟無法接下來的話，我會請我認識的大學教授幫忙介紹。
+
+女： 知道了。
+
+問題：女員工為了找打工的人，要做什麼？
+
+１．聯絡大學時代的同學 ２．聯絡研究所的學弟妹
+３．向大學的學生事務處刊登徵才資訊 ４．請大學教授介紹人選
+
+[第三題 jp](#第三題-jp)
